--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,4 +1,4 @@
 PORT=8080
-DB_URL=mongodb+srv://aziz:aziz@cluster0.xts2pp4.mongodb.net/amani?retryWrites=true&w=majority
+DB_URL=7ot el url mte3 el mongo db lahne
 JWT_SECRET_KEY = "dfbkjgflseiia3948943954wfsdchsgfuw#%#%"
 JWT_EXPIRES = 7d
